--- a/src/app/minicomponents/prompt/prompt.component.html
+++ b/src/app/minicomponents/prompt/prompt.component.html
@@ -1,11 +1,11 @@
 <mat-card-header>
   <div mat-card-avatar class="example-header-image"></div>
-  <mat-card-title>{{ badge.name }}</mat-card-title>
-  <mat-card-subtitle>{{ badge.category }}</mat-card-subtitle>
+  <mat-card-title>{{ prompt.title }}</mat-card-title>
+  <mat-card-subtitle>{{ prompt.subtitle }}</mat-card-subtitle>
 </mat-card-header>
 <mat-card-content>
   <p>
-    {{ badge.text }}
+    {{ prompt.text }}
   </p>
 </mat-card-content>
 <mat-card-actions>
