--- a/src/app/subcomponents/company-thumbnail/company-thumbnail.component.html
+++ b/src/app/subcomponents/company-thumbnail/company-thumbnail.component.html
@@ -1,26 +1,10 @@
-<!--
-  <button mat-icon-button [matMenuTriggerFor]="menu">
-    <mat-icon>more_vert</mat-icon>
-  </button>
-  <mat-menu #menu="matMenu">
-    <button mat-menu-item (click)="editCompany()">
-      <mat-icon>edit</mat-icon>
-      <span>Edit company</span>
-    </button>
-
-    <button mat-menu-item (click)="deleteCompany()">
-      <mat-icon>delete</mat-icon>
-      <span>Delete company</span>
-    </button>
-  </mat-menu>
--->
 <mat-card style="margin-top:10px;" [ngClass]="{'embedded': embedded}">
   <mat-card-content  *ngIf="company">
     <mat-card-info>
       <mat-card-contents>
         <div class="Image"
         [attr.focus]="false">
-          <img [src]="sanitize(company.imageUrl)"/>
+          <img [src]="company.imageUrl"/>
         </div>
         <mat-card-header>
           <mat-card-title *ngIf="company">
