--- a/src/app/panels/post-page/post-page.component.html
+++ b/src/app/panels/post-page/post-page.component.html
@@ -9,13 +9,15 @@
     <mat-tab label="Basic informations">
       <div class="flex">
         <div>
-          <h2>
+          <h2 style="width: 100%;">
             {{ post.hierarchy_level }} - {{ post.function }}<br>
             <span>{{ post.cities.join(' - ') }}</span>
           </h2>
         </div>
         <img mat-card-image *ngIf="post.imageUrl" [src]="sanitize(post.imageUrl)" alt="@{{ post.owner.email }}">
-        <h2>{{ post.title }}</h2>
+        <h2 style="width: 100%;">
+          {{ post.title }}
+        </h2>
         <p>
           {{ post.description }}
         </p>
