--- a/src/app/subcomponents/post/post.component.html
+++ b/src/app/subcomponents/post/post.component.html
@@ -1,79 +1,3 @@
-<!-- <mat-card style="margin-top:10px;" @develop [ngClass]="{'noEmbed' : !embed}">
-
-  <div class="userData" *ngIf="!embed">
-    <div class="profileImage">
-      <div class="img" [ngStyle]="{'background-image': 'url(' + post.owner['imageUrl'].toString() + ')'}"></div>
-    </div>
-    <div style="flex-grow: 1;">
-      <h1>
-        {{ post.owner['email'] || post.owner['title'] }}
-      </h1>
-      <h4>
-        {{ post.timestamp }}
-      </h4>
-    </div>
-
-    <button mat-icon-button>
-      <mat-icon>more_vert</mat-icon>
-    </button>
-
-  </div>
-  <mat-divider [inset]="true"></mat-divider>
-  <mat-card-content>
-    <mat-card-info>
-      <div class="Image" [attr.focus]="false" (click)="toggleFocus($event)" *ngIf="post.imageUrl && post.imageUrl.toString() !== ''">
-        <div class="img" [ngStyle]="{'background-image': 'url(' + bg_image + ')'}"></div>
-      </div>
-
-      <mat-card-contents>
-        <mat-card-header style="display: flex;">
-          <mat-chip-list>
-            <post-badge class="{{ badge.category }}" *ngFor="let badge of post.badges" [badge]="badge"></post-badge>
-          </mat-chip-list>
-          <mat-card-title>
-            {{post.title}}
-          </mat-card-title>
-
-          <mat-card-subtitle *ngIf="false">
-            <span>Huhu&nbsp;</span>
-          </mat-card-subtitle>
-
-
-        </mat-card-header>
-        <p (click)="readMore($event)" [attr.shrink_text]="true">
-          <span>
-            {{post.description}}<br>
-          </span>
-        </p>
-      </mat-card-contents>
-
-    </mat-card-info>
-    <mat-card-actions>
-      <button mat-button routerLink="{{ '/post/' + post.id }}"
-        mat-icon-button aria-label="Visit profile">
-        <mat-icon>zoom_out_map</mat-icon>
-      </button>
-      <button mat-icon-button aria-label="Like">
-        <mat-icon>star</mat-icon>
-      </button>
-      <button
-       mat-icon-button
-       aria-label="Comment"
-       (click)="openComments()">
-        <mat-icon
-          matBadge="{{ post.comments.length }}"
-          matBadgePosition="above after"
-          matBadgeColor="accent">comment</mat-icon>
-      </button>
-      <button mat-icon-button aria-label="Settings">
-        <mat-icon>edit</mat-icon>
-      </button>
-    </mat-card-actions>
-  </mat-card-content>
-
-</mat-card> -->
-
-
 <mat-card class="example-card">
   <mat-card-header>
     <div *ngIf="post.owner.imageUrl" mat-card-avatar class="example-header-image" [style]=" 'background-image: url(' + post.owner.imageUrl.toString() + ');' "></div>
@@ -124,9 +48,9 @@
   <mat-card-actions>
     <button mat-button (click)="openPost()"
       mat-icon-button aria-label="Expand">
-      <mat-icon>unfold_more</mat-icon>
+      <mat-icon>more_horiz</mat-icon>
     </button>
-    <button mat-icon-button aria-label="Submit" (click)="follow()" *ngIf="post.subject.toLowerCase() == 'job' && post.type.toLowerCase() == 'offer'">
+    <button mat-icon-button aria-label="Submit" (click)="follow()">
       <mat-icon>{{ post.following ? 'star': 'star_outline'}}</mat-icon>
     </button>
 
