--- a/src/app/view_components/company-list/company-list.component.html
+++ b/src/app/view_components/company-list/company-list.component.html
@@ -11,7 +11,7 @@ width: calc(100% - 20px);">
     <mat-spinner></mat-spinner>
   </div>
 
-</div>
+</div><!--
 <button mat-fab class="bottom" color="'primary'" (click)="createCompany()" matTooltip="Create company">
   <mat-icon>add</mat-icon>
-</button>
+</button> -->
