--- a/src/app/minicomponents/prompt/prompt.component.html
+++ b/src/app/minicomponents/prompt/prompt.component.html
@@ -1,5 +1,7 @@
 <mat-card-header>
-  <div mat-card-avatar class="example-header-image"></div>
+  <div mat-card-avatar class="header-image">
+    <img src="../../../assets/svg/Gradient.png">
+  </div>
   <mat-card-title>{{ prompt.title }}</mat-card-title>
   <mat-card-subtitle>{{ prompt.subtitle }}</mat-card-subtitle>
 </mat-card-header>
