--- a/src/app/minicomponents/sidenav/sidenav.component.html
+++ b/src/app/minicomponents/sidenav/sidenav.component.html
@@ -24,7 +24,7 @@
   <mat-divider [inset]="false"></mat-divider>
   <h3 matSubheader>Get Hired!</h3>
 
-  <mat-list-item (click)="goto('/offers')">
+  <mat-list-item (click)="goto('/discover/offers')">
     <a matLine>Offers</a>
     <button mat-icon-button>
       <mat-icon>assistant_photo</mat-icon>
@@ -41,7 +41,7 @@
   <mat-divider [inset]="false"></mat-divider>
   <h3 matSubheader>Hire & Seek</h3>
 
-  <mat-list-item (click)="goto('/offers')">
+  <mat-list-item (click)="goto('/discover/demands')">
     <a matLine>Demands</a>
     <button mat-icon-button>
       <mat-icon>announcement</mat-icon>
